--- a/styles/style.css
+++ b/styles/style.css
@@ -10,13 +10,13 @@
 }
 
 body{
-  background: linear-gradient(188deg, rgba(14, 61, 231, 0.544) 0.5%, rgba(6, 27, 101, 0.864) 99.96%);
+  background: linear-gradient(188deg, rgba(14, 61, 231, 0.65) 0.5%, rgba(6, 27, 101, 0.864) 99.96%);
   width: 100%;
   height: 100%;
 }
 
 header{
-  background: linear-gradient(188deg, rgba(16, 43, 152, 0.601).5%, rgba(140, 159, 225, 0.864) 99.96%);
+  background: linear-gradient(188deg, rgba(16, 43, 152, 0.601).5%, rgba(14, 61, 231, 0) 99.96%);
 }
 
 header button{
@@ -78,7 +78,7 @@ nav ul li a:hover{
 }
 
 .container{
-  background: linear-gradient(188deg, rgb(231, 233, 241) 0.5%, rgb(188, 194, 219) 99.96%);
+
   display: flex;
   justify-content: space-around;
   padding: 2rem 2rem;
@@ -88,7 +88,6 @@ nav ul li a:hover{
   font-size: 30px;
   font-weight: bold;
   color: #192964;
-  text-shadow: 2px 2px 14px black;
 }
 
 .hero .subtext{
@@ -101,7 +100,7 @@ nav ul li a:hover{
 }
 
 .heroimage img{
-  width: 15rem;
+  width: 12rem;
 }
 
 .container2{
@@ -116,7 +115,7 @@ nav ul li a:hover{
 
 .container3{
   padding: 3rem;
-  background: linear-gradient(188deg, rgb(231, 233, 241) 0.5%, rgb(188, 194, 219) 99.96%);
+  background: linear-gradient(188deg, rgb(231, 233, 241) 0.5%, rgba(14, 61, 231, 0)99.96%);
   text-align: center;
   font-size: 20px;
 }
@@ -345,43 +344,3 @@ nav ul li a:hover{
   padding: 0.7rem 1.7rem;
 }
 
-
-
-
-
-.tabs-container {
-  position: fixed;
-  top: 0;
-  width: 100%;
-  background-color: #333;
-  overflow: hidden;
-  z-index: 1000;
-  opacity: 0; /* Initially set opacity to 0 to hide the tabs */
-  transition: opacity 0.5s ease; /* Add a smooth transition effect */
-}
-
-.tab {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 16px;
-  cursor: pointer;
-}
-
-.tab:hover {
-  background-color: #555;
-}
-
-.section {
-  margin-top: 50px;
-  padding: 20px;
-  height: 500px;
-  text-align: center;
-}
-
-.active {
-  background-color: #555;
-}
