--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
 }
 
 body{
-  background: linear-gradient(188deg, rgba(14, 61, 231, 0.65) 0.5%, rgba(6, 27, 101, 0.864) 99.96%);
+  background: linear-gradient(188deg, rgba(14, 61, 231, 0.527) 0.5%, rgba(6, 27, 101, 0.7) 99.96%);
   width: 100%;
   height: 100%;
 }
@@ -87,7 +87,7 @@ nav ul li a:hover{
 .hero{
   font-size: 30px;
   font-weight: bold;
-  color: #192964;
+  color: white;
 }
 
 .hero .subtext{
