--- a/styles/style.css
+++ b/styles/style.css
@@ -244,7 +244,8 @@ nav ul li a:hover{
 
 .container7{
   padding: 3rem;
-  background: linear-gradient(188deg, rgb(231, 233, 241) 0.5%, rgb(188, 194, 219) 99.96%);
+  /* background: linear-gradient(188deg, rgb(231, 233, 241) 0.5%, rgb(188, 194, 219) 99.96%); */
+  background: linear-gradient(188deg, rgb(231, 233, 241) 0.5%, rgba(14, 61, 231, 0)99.96%);
   text-align: center;
   font-size: 20px;
 }
@@ -282,6 +283,11 @@ nav ul li a:hover{
   
 }
 
+.container7 .text .subtext .tabs .tab1 img{
+  width: 3rem;
+  border-radius: 20rem;
+}
+
 .container7 .text .subtext .tabs .tab2{
   padding: 2rem 1rem;
   border-style: solid;
@@ -291,6 +297,11 @@ nav ul li a:hover{
   width: 100%;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.259);
   background: linear-gradient(188deg, rgb(231, 233, 241) 0.5%, rgb(188, 194, 219) 99.96%);
+}
+
+.container7 .text .subtext .tabs .tab2 img{
+  width: 3rem;
+  border-radius: 20rem;
 }
 
 .container7 .text .subtext .tabs .tab3{
@@ -304,6 +315,11 @@ nav ul li a:hover{
   background: linear-gradient(188deg, rgb(231, 233, 241) 0.5%, rgb(188, 194, 219) 99.96%);
 }
 
+.container7 .text .subtext .tabs .tab3 img{
+  width: 3rem;
+  border-radius: 20rem;
+}
+
 @media  screen and (min-width: 350px) and (max-width: 850px){
   .container7 .text .subtext .tabs{
     display: flex;
@@ -311,15 +327,15 @@ nav ul li a:hover{
   }
 
   .container7 .text .subtext .tabs .tab1{
-    height: 12rem;
+    height: 13rem;
   }
 
   .container7 .text .subtext .tabs .tab2{
-    height: 12rem;
+    height: 13rem;
   }
 
   .container7 .text .subtext .tabs .tab3{
-    height: 12rem;
+    height: 13rem;
   }
 }
 
