--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,12 @@ body{
   text-align: center;
   font-size: 12px;
   height: 2rem;
-  background-color: rgb(225, 225, 225);
+  background-color: rgb(0, 78, 162);
+  color: white;
   padding: 0.5rem 1.5rem;
   display: flex;
   gap: 5rem;
+  font-size: 70%;
 }
 
 .subnav img{
@@ -32,6 +34,7 @@ nav{
   border-left: none;
   border-right: none;
   border-color: rgb(42, 42, 113);
+  color: white;
   border-width: 1px;
 }
 
