--- a/css/report.css
+++ b/css/report.css
@@ -237,3 +237,11 @@ button:hover {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
+.brief{
+  color: rgb(176, 25, 25);
+}
+
+h4{
+  color: rgb(176, 25, 25);
+}
