--- a/css/style.css
+++ b/css/style.css
@@ -273,3 +273,162 @@ button{
   0% { transform: translate(-50%, -50%) rotate(0deg); }
   100% { transform: translate(-50%, -50%) rotate(360deg); }
 }
+
+@media  screen and (min-width: 350px) and (max-width: 850px){
+  .customer-care-content .content1{
+    font-size: 70%;
+  }
+
+  .customer-care-content .content1 .flex .logo p{
+    font-size: 90%;
+  }
+
+  .customer-care-content .content1 .flex .logo img{
+    width: 2.5rem;
+  }
+
+  .content1{
+    padding: 20% 10%;
+  }
+}
+
+
+.floating-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: linear-gradient(200deg, rgb(0, 78, 162) 0.9%, rgb(107, 154, 241) 99.96%);
+  color: #fff;
+  border: none;
+  border-radius: 100%;
+  width: 60px;
+  height: 60px;
+  font-size: 24px;
+  cursor: pointer;
+  z-index: 999;
+}
+
+/* Styling for the expanded customer care panel */
+.customer-care-panel {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  z-index: 998;
+  
+}
+
+.customer-care-content {
+  background-color: #fff;
+  padding: 0px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  width: 80%;
+  height: 80%;
+  overflow: auto;
+  text-align: center;
+  font-size: 90%;
+}
+
+.logo{
+  display: flex;
+  gap: 0.5rem;
+}
+
+.logo img{
+  width: 3rem;
+}
+
+.logo p{
+  font-size: 12.5px;
+  font-weight: bold;
+  color: white;
+}
+
+.flex{
+  display: flex;
+  justify-content: space-between;
+}
+
+.content1{
+  background: linear-gradient(200deg, rgb(11, 95, 184) 0.9%, rgb(1, 33, 93) 99.96%);
+  padding: 5%;
+  color: white;
+}
+
+.flex button{
+  border-radius: 20rem;
+}
+
+.content2{
+  padding: 2%;
+  display: flex;
+  justify-content: space-between;
+  gap: 5%;
+}
+
+.content2 .container{
+  background-color: transparent;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgba(11, 95, 184, 0.717);
+  border-radius: 7px;
+  width: 100%;
+  color: rgb(11, 95, 184);
+}
+
+.content2 .container button{
+  background-color: white;
+  border-style: solid;
+  border-color: rgb(11, 95, 184);
+  border-width: 2px;
+  border-radius: 20rem;
+  color: rgb(11, 95, 184);
+
+}
+
+.content2 .container2 button{
+  background-color: white;
+  border-style: solid;
+  border-color: rgb(11, 95, 184);
+  border-width: 2px;
+  border-radius: 20rem;
+  color: rgb(11, 95, 184);
+}
+
+.content2 .container img{
+  width: 40%;
+}
+
+
+.content2 .container2{
+  background: linear-gradient(200deg, rgb(4, 26, 59) 0.9%, rgb(0, 5, 14) 99.96%);
+  padding: 1rem;
+  line-height: 2rem;
+  color: white;
+  width: 100%;
+  border-radius: 7px;
+  display: block;
+}
+
+@media  screen and (min-width: 350px) and (max-width: 850px){
+  .content2{
+    display: flex;
+    flex-direction: column;
+  }
+
+  .content2 .container{
+    text-align: left;
+    padding: 1rem;
+  }
+
+  .content2 .container2{
+    text-align: left;
+    padding: 1rem;
+  }
+}
