--- a/css/style.css
+++ b/css/style.css
@@ -328,7 +328,7 @@ button{
   padding: 0px;
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
-  width: 80%;
+  width: 90%;
   height: 80%;
   overflow: auto;
   text-align: center;
@@ -370,6 +370,12 @@ button{
   display: flex;
   justify-content: space-between;
   gap: 5%;
+}
+
+h2{
+  padding: 1rem;
+  text-align: center;
+  color: #4CAF50;
 }
 
 .content2 .container{
@@ -431,4 +437,38 @@ button{
     text-align: left;
     padding: 1rem;
   }
+
+  ::-webkit-scrollbar {
+    width: 5px; /* Width of the scrollbar */
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: ; /* Color of the track */
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: rgb(11, 95, 184); /* Color of the scrollbar handle */
+    border-radius: 6px; /* Rounded corners */
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(176, 25, 25); /* Color of the scrollbar handle on hover */
+  }
+}
+
+::-webkit-scrollbar {
+  width: 10px; /* Width of the scrollbar */
+}
+
+::-webkit-scrollbar-track {
+  background: white; /* Color of the track */
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(11, 95, 184); /* Color of the scrollbar handle */
+  border-radius: 6px; /* Rounded corners */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(176, 25, 25); /* Color of the scrollbar handle on hover */
 }
