--- a/css/authenticate.css
+++ b/css/authenticate.css
@@ -323,6 +323,7 @@ form input{
   border-radius: 7px;
   width: 100%;
   color: rgb(11, 95, 184);
+  padding: 1.5rem;
 }
 
 .content2 .container button{
