--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ body{
 .subnav{
   text-align: center;
   font-size: 12px;
-  height: 2rem;
   background-color: rgb(0, 78, 162);
   color: white;
   padding: 0.5rem 1.5rem;
@@ -455,6 +454,10 @@ h2{
   ::-webkit-scrollbar-thumb:hover {
     background: rgb(176, 25, 25); /* Color of the scrollbar handle on hover */
   }
+
+  .mexico img{
+    width: 80%;
+  }
 }
 
 ::-webkit-scrollbar {
@@ -480,5 +483,5 @@ h2{
 }
 
 .mexico img{
-  width: 80%;
+  width: 50%;
 }
