--- a/css/link.css
+++ b/css/link.css
@@ -6,13 +6,12 @@
 }
 
 body{
-  
+
 }
 
 .subnav{
   text-align: center;
   font-size: 12px;
-
   background-color: rgb(0, 78, 162);
   color: white;
   padding: 0.5rem 1.5rem;
@@ -35,6 +34,20 @@ nav{
   border-right: none;
   border-color: rgb(42, 42, 113);
   border-width: 1px;
+  background-color: transparent;
+}
+
+.page nav{
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem 0.5rem;
+  border-style: solid;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-color: rgb(42, 42, 113);
+  border-width: 1px;
+  background-color: rgb(42, 42, 113);
 }
 
 nav button{
@@ -51,6 +64,11 @@ nav .logo{
 nav .logo img{
   width: 3rem;
 }
+
+.page nav .logo img{
+  width: 8rem;
+}
+
 nav .logo p{
   font-size: 12.5px;
   font-weight: bold;
@@ -67,40 +85,103 @@ button{
   border-width: 1px;
 }
 
-.form{
+h2{
+  padding: 1rem;
   text-align: center;
-  margin-top: 10%;
-  padding: 2rem;
+  color: #4CAF50;
 }
 
-form{
-  border-style: solid;
-  border-color: rgb(42, 42, 113);
-  border-width: 2px;
-  width: 100%;
-  padding: 4rem 2rem;
-  border-radius: 5px;
+.subcontainer{
+  padding: 1rem;
+  text-align: center;
   color: rgb(42, 42, 113);
 }
 
 
-form input{
-  width: 60%;
+
+form {
+  max-width: 600px;
+  margin: auto;
+  padding: 1rem;
+}
+
+label {
+  display: block;
+  margin-bottom: 8px;
+  color: rgb(42, 42, 113);
+}
+
+input{
   border-radius: 5px;
   border-color: transparent;
   height: 2.5rem;
   background-color: rgba(42, 42, 113, 0.152);
 }
 
-@media  screen and (min-width: 350px) and (max-width: 850px){
-  form input{
-    width: 90%;
-  }
+select{
+  width: 100%;
+  background-color: rgba(42, 42, 113, 0.152);
+  color: rgb(42, 42, 113);
+  height: 2.5rem;
+  border-radius: 5px;
+  border-style: none;
+}
 
-  .form{
-    text-align: center;
-    margin-top: 20%;
-  }
+option{
+  background-color: #4CAF50;
+  color: white;
+}
+
+input, textarea {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 16px;
+  box-sizing: border-box;
+  border-radius: 5px;
+  border-color: transparent;
+  background-color: rgba(42, 42, 113, 0.152);
+}
+
+textarea {
+  height: 100px;
+}
+
+button {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #45a049;
+}
+
+#popupContainer {
+  display: none;
+  position: fixed;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px 25px;
+  background-color: #f0f0f0;
+  border: 1px solid #ccc;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+  width: 70%;
+  background-color: #4CAF50;
+  color: white;
+  border-radius: 5px;
+}
+
+/* Style the close button */
+#closeButton {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
 }
 
 
@@ -141,38 +222,11 @@ form input{
   }
 }
 
-.loading-screen {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 78, 162, 0.812);
-  display: none; /* Initially hidden */
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-size: 24px;
-  z-index: 9999;
+.radioin{
+  text-align: left;
+  margin-left: -40%;
 }
 
-/* Styles for rotating circle animation */
-.loading-screen {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
-  display: none; /* Initially hidden */
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-size: 24px;
-  z-index: 9999;
-}
-
-/* Styles for rotating circle animation */
 .loading-screen {
   position: fixed;
   top: 0;
@@ -188,32 +242,26 @@ form input{
   z-index: 9999;
 }
 
-/* Rotating circle animation */
-.loading-circle {
-  border: 4px solid #f3f3f3;
-  border-top: 4px solid #3498db;
+.spinner {
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: #7986CB;
   border-radius: 50%;
-  width: 110px;
-  height: 110px;
-  animation: spin 2s linear infinite;
-  position: absolute;
-  top: calc(40% - 25px); /* Adjust the position */
-  left: calc(40% - 25px); /* Adjust the position */
-}
-
-/* Rotating logo animation */
-.company-logo {
-  width: 100px; /* Adjust the size */
-  height: auto;
-  position: absolute;
-  top: calc(40.8% - 25px); /* Adjust the position */
-  left: calc(40.9% - 25px); /* Adjust the position */
-  animation: spin 4s linear infinite reverse;
+  width: 40px;
+  height: 40px;
+  animation: spin 1s linear infinite;
 }
 
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+.brief{
+  color: rgb(176, 25, 25);
+}
+
+h4{
+  color: rgb(176, 25, 25);
 }
 
 
@@ -409,4 +457,86 @@ form input{
 
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(176, 25, 25); /* Color of the scrollbar handle on hover */
+}
+
+.link{
+  text-align: center;
+}
+
+.link .img{
+  background: linear-gradient(200deg, rgb(191, 52, 52) 0.9%, rgb(108, 4, 134) 15.9%, rgb(133, 1, 1) 10.9%, rgb(144, 21, 21) 35.9%, rgb(20, 3, 79) 0.9%);
+  padding: 0.6rem;
+}
+
+.link .img img{
+  width: 3rem;
+}
+
+.container {
+  text-align: center;
+  margin-top: 20px;
+}
+
+.page {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #f0f0f0;
+  transition: transform 0.5s ease-in-out;
+}
+
+.page.open {
+  display: block;
+}
+
+.page h1 {
+  
+}
+
+.closeButton {
+  position: absolute;
+  top: 35px;
+  right: 10px;
+  font-size: 20px;
+  cursor: pointer;
+  background-color: transparent;
+  border-style: solid;
+  border-width: 1.5px;
+}
+
+.bank{
+  color: #edf0ff;
+  background: linear-gradient(200deg, rgb(42, 42, 113) 0.9%, rgb(0, 5, 14) 99.96%);
+  padding: 1.5rem 1rem;
+}
+
+.extra{
+  text-align: center;
+}
+
+.extraleg{
+  text-align: center;
+}
+
+.extraleg img{
+  width: 80%;
+}
+
+.extraleg p{
+  color: rgb(42, 42, 113);
+  padding: 0.5rem 2rem;
+  letter-spacing: 0.2rem;
+}
+
+footer{
+  background: linear-gradient(200deg, rgb(72, 72, 154) 0.9%, rgb(42, 42, 113) 99.96%);
+  padding: 2rem;
+  color: rgb(185, 185, 222);
+}
+
+.page footer nav{
+  background-color: transparent;
 }
