--- a/css/style.css
+++ b/css/style.css
@@ -480,6 +480,7 @@ h2{
 .mexico{
   padding: 1rem;
   text-align: center;
+  background: linear-gradient(200deg, rgb(255, 255, 255) 0.9%, rgb(177, 177, 177) 15.9%, rgb(159, 159, 159) 10.9%, rgb(255, 255, 255) 35.9%, rgb(255, 255, 255) 0.96%);
 }
 
 .mexico img{
